2004-11-08  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/goldberg.tcl: Added slightly adapted version of
	Keith Vetter's tkGoldberg as the final animation demo. Many many
	thanks to Keith for giving his permission! [FRQ 627466]

2004-11-07  Peter Spjuth  <peter.spjuth@space.se>

	* doc/frame.n: Added some info for -width/-height options.
	[Bug 1055423]

2004-11-07  Peter Spjuth  <peter.spjuth@space.se>

	* tests/grid.test:
	* generic/tkGrid.c: Made handling of ^ a bit more consistent in
	corner cases.  This makes ^ work without any widgets in the same
	command. [Bug 962589]

2004-11-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/pendulum.tcl:	Added demonstrations of how to do
	* library/demos/aniwave.tcl:	animations using Tcl/Tk to the
	* library/demos/anilabel.tcl:	widget demo.

2004-11-03  Don Porter  <dgp@users.sourceforge.net>

	* tests/button.test: Update expected results to account for more
	verbose errorinfo from errors in variable traces [Tcl Bug 572164]

2004-11-01  Don Porter  <dgp@users.sourceforge.net>

	* tests/dialog.test (dialog-1.1): Update expected result to changes
	in the error messages produced by procs.

2004-10-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/wm.test: Add Win32 test cases for attributes
	subcommand.
	* win/tkWinWm.c (WmAttributesCmd): Fixup broken
	option processing logic for attributes subcommand.

2004-10-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWin32Dll.c (DllMain, _except_dllmain_detach_handler):
	Rework pushing of exception handler function pointer
	so that compiling with gcc -O3 works. Remove empty
	function call to avoid compiler warning. Mark the
	DllMain function as noinline to avoid compiler
	error from duplicated asm labels in generated code.

2004-10-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tkUnixScale.c (DisplayHorizontalValue): Fix for #220927 by 
	Michael Schlenker to keep the labels within the window.
	