@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: text.test,v 1.33 2004/09/23 14:57:25 vincentdarley Exp $
+# RCS: @(#) $Id: text.test,v 1.34 2004/11/09 12:46:10 vincentdarley Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -2647,6 +2647,14 @@ test text-20.172 {TextSearchCmd, regexp search multi-line} {knownBug} {
     .t2 search -regexp -backward -- {b+\n|a+\n(b+\n)+} end
     # Should match at 1.0 for a true greedy match
 } {1.0}
+
+test text-20.172.1 {TextSearchCmd, regexp search multi-line} {knownBug} {
+    deleteWindows
+    pack [text .t2]
+    .t2 insert 1.0 "line0\nline1\nline1\nline1\nline1\nline2\nline2\nline2\nline3\n"
+    .t2 search -nolinestop -regexp -nocase -forwards -- {^(.*)\n(\1\n)+} 1.0 end
+    # Matches at 6.0 currently
+} {2.0}
 
 test text-20.173 {TextSearchCmd, regexp search multi-line} {
     deleteWindows
